# QuickPods

./: .env.local  .eslintrc.json  .gitignore  I18N_GUIDE.md  README.md  generate_blogs.py  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  translate_blogs.py
.husky/: pre-commit
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
components/: BlogCard.tsx  Footer.tsx  Header.tsx  LanguageSwitcher.tsx  NewsletterSignup.tsx  PodCard.tsx  SkeletonPodCard.tsx  SocialShare.tsx  ThemeToggle.tsx
content/: 20150930-samaltman-greylock.md  20151104-patrickcollison-greylock.md  20151130-brianchesky-greylock.md  20190604-navalravikant-powerfuljre.md  20190919-tedchiang-manifold.md  20191105-gallant-hardknocktv.md  20201013-chamathpalihapitiya-theknowledgeprojectpodcast.md  20210510-matthewwalker-richroll.md  20210602-chrisbosh-dailystoic.md  20210802-justinkan-colinandsamir.md  20220331-paulgraham-ycombinator.md  20220522-simonsinek-thediaryofaceo.md  20220731-crystalwidjaja-lennyspodcast.md  20220909-shaquilleoneal-pbdpodcast.md  20221122-stephencurry-jjredick.md  20221207-markrober-colinandsamir.md  20230130-chadjohnson-clubshayshay.md  (+96 more)
python-helpers/: .gitignore  README.md  pyproject.toml
python-helpers/src/: YT.csv  appendURLS.py  blogfixtitle.py  clean_old_blogs.py  main.py  playlist_creator.py  playlist_updates.py  processed_blogs.json  removedupe.py  upload_blogs.py  url_to_blogpost.py  youtube_scraper.py  youtube_to_supabase.py
python-helpers/src/db/: client.py
python-helpers/src/models/: model.py
(+44 files in other folders)
